--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       </div>
     </div>
     <div class="title">
-      <audio controls autoplay>
-        <source src="fmusic.mp3" type="audio/mpeg">
-      </audio>
-      <h3 class="STARDUST1">2022</h3>
+      <h3 class="STARDUST1">14-2-2023</h3>
       <h1 class="STARDUST2">Chúc ni Valentine vui vẻ nhó :3</h1>
       <h3 class="STARDUST3">L O V E <strong>❤</strong> Y O U</h3>
       <img class="img" src="mainc.png" alt="JUNO_OKYO" />
       <canvas id="pinkboard"></canvas>
+      <audio controls autoplay>
+        <source src="fmusic.mp3" type="audio/mpeg">
+      </audio>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
